style: Add comments

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- 
+Hidden surprises in the blog, hope you can discover them! 😊😘
+
+This is also the author's first attempt at writing pure HTML.
+  -->
 <!DOCTYPE html>
 <html lang="zh">
 
