--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- 
 Hidden surprises in the blog, hope you can discover them! 😊😘
-
 This is also the author's first attempt at writing pure HTML.
+
+fix: change this repo to public, deploy it again.
   -->
 <!DOCTYPE html>
 <html lang="zh">
