fix: Switch to Github Actions

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ fix: change this repo to public, deploy it again.
         <div id="message">
             自樱花纷飞那日起，时光的每粒沙都闪着爱意。<br>
             <span style=" font-size: 0.9em; color: black;">
-                Since cherry blossoms danced that day<br>
-                Every grain of time glows with love.
+                Since cherry blossoms danced that day,<br>
+                every grain of time glows with love.
             </span>
         </div>
 
